made changes to footer

--- a/FinalProject.Web/Views/Event/Past.cshtml
+++ b/FinalProject.Web/Views/Event/Past.cshtml
@@ -1,59 +1,2 @@
-@* @model Paged<Event>
-
-<h3 class="mb-3">Past Events</h3>
-
-<table class="table table-hover">
-    <thead>
-        <tr>
-            <th>
-                Id
-                <vc:sort-link column="id" />
-            </th>
-            <th>
-                Title
-                <vc:sort-link column="title" />
-            </th>
-            <th>
-                Date
-                <vc:sort-link column="date" />
-            </th>
-            <th>
-                Location
-                <vc:sort-link column="location" />
-            </th>
-            <th>
-                Actions
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach(var e in Model.Data) {
-            <tr>
-                <td>@e.Id</td>
-                <td>@e.Title</td>
-                <td>@e.Date.ToString("f")</td>
-                <td>@e.Location</td>
-                <td>
-                    @if (User.Identity.IsAuthenticated)
-                    {
-                        <button 
-                            class="btn btn-secondary" 
-                            hx-get="@Url.Action("UploadImage", "Past", new { id = e.Id })" 
-                            hx-target="#image-upload-@e.Id" 
-                            hx-swap="innerHTML">Upload Image</button>
-                    }
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
-
-<vc:paginator pages="@Model.Pages" />
-
-<!-- Div to hold the image upload form -->
-<div id="image-upload-@Model.Data.FirstOrDefault()?.Id" class="image-upload"></div>
-
-@section Scripts {
-    @* Ensure HTMX is included *@
-    @* <script src="https://unpkg.com/htmx.org@1.6.1"></script>
-} *@
+<!-- woof and wag banner -->
+    <img src="~/images/banners/Gallery.svg" class="banner-full-width img-fluid" alt="Gallery banner">
