--- a/FinalProject.Web/Views/Home/About.cshtml
+++ b/FinalProject.Web/Views/Home/About.cshtml
@@ -93,4 +93,96 @@
             </div>
         </div>
     </div>
+    <br>
+
+    <!-- divider for sections-->
+    <hr class="section-divider">
+
+    <!-- Reviews Section -->
+    <div class="text-center mt-5">
+        <h2>Reviews</h2>
+        <p>Have a read of just some of the reviews left by Woof & Wander members!</p>
+        
+
+        <div class="row justify-content-center">
+            <!-- Card 1 -->
+            <div class="col-md-3">
+                <div class="card review-card m-3">
+                    <img src="~/images/reviews/AboutReview1.jpg" class="card-img-top" alt="Review Image">
+                    <div class="card-body review-card-body">
+                        <h5 class="card-title">
+                            <i class="bi bi-star-fill star-icon"></i>
+                            <i class="bi bi-star-fill star-icon"></i>
+                            <i class="bi bi-star-fill star-icon"></i>
+                            <i class="bi bi-star-fill star-icon"></i>
+                            <i class="bi bi-star-fill star-icon"></i>
+                        </h5>
+                        <i class="bi bi-chat-heart"></i>
+                        <p class="card-text">This app has helped us connect with other like-minded dog owners!</p>
+                        <p class="font-weight-bold review-name"><i class="bi bi-person user-icon"></i><br>Hannah M</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 2-->
+            <div class="col-md-3">
+                <div class="card review-card m-3">
+                    <img src="~/images/reviews/AboutReview2.jpg" class="card-img-top" alt="Review Image">
+                    <div class="card-body review-card-body">
+                        <h5 class="card-title">
+                            <i class="bi bi-star-fill star-icon"></i>
+                            <i class="bi bi-star-fill star-icon"></i>
+                            <i class="bi bi-star-fill star-icon"></i>
+                            <i class="bi bi-star-fill star-icon"></i>
+                            <i class="bi bi-star-fill star-icon"></i>
+                        </h5>
+                        <i class="bi bi-chat-heart"></i>
+                        <p class="card-text">Rex has so much fun playing with like-minded dogs and has gained more confidence!</p>
+                        <p class="font-weight-bold review-name"><i class="bi bi-person user-icon"></i><br> Sarah B</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 3-->
+            <div class="col-md-3">
+                <div class="card review-card m-3">
+                    <img src="~/images/reviews/AboutReview3.jpg" class="card-img-top" alt="Review Image">
+                    <div class="card-body review-card-body">
+                        <h5 class="card-title">
+                            <i class="bi bi-star-fill star-icon"></i>
+                            <i class="bi bi-star-fill star-icon"></i>
+                            <i class="bi bi-star-fill star-icon"></i>
+                            <i class="bi bi-star-fill star-icon"></i>
+                            <i class="bi bi-star-fill star-icon"></i>
+                        </h5>
+                        <i class="bi bi-chat-heart"></i>
+                        <p class="card-text">We have the best time at the German Pointer Breed meet-ups! Lucky has fun!</p>
+                        <p class="font-weight-bold review-name"><i class="bi bi-person user-icon"></i><br> Paddy S</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 4-->
+            <div class="col-md-3">
+                <div class="card review-card m-3">
+                    <img src="~/images/reviews/AboutReview4.jpg" class="card-img-top" alt="Review Image">
+                    <div class="card-body review-card-body">
+                        <h5 class="card-title">
+                            <i class="bi bi-star-fill star-icon"></i>
+                            <i class="bi bi-star-fill star-icon"></i>
+                            <i class="bi bi-star-fill star-icon"></i>
+                            <i class="bi bi-star-fill star-icon"></i>
+                            <i class="bi bi-star-fill star-icon"></i>
+                        </h5>
+                        <i class="bi bi-chat-heart"></i>
+                        <p class="card-text">We love going out for walks with other pet owners and meeting new friends!</p>
+                        <p class="font-weight-bold review-name"><i class="bi bi-person user-icon"></i><br> Kitty W</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- divider for sections-->
+    <hr class="section-divider">
 </div>
