--- a/FinalProject.Web/Views/Home/Recipes.cshtml
+++ b/FinalProject.Web/Views/Home/Recipes.cshtml
@@ -188,3 +188,7 @@
 </div>
 <!-- divider for sections-->
 <hr class="section-divider">
+
+<div class="healthy-snacks text-center">
+    <h3>Healthy Snack Options</h3>
+</div>
