--- a/FinalProject.Web/Views/Shared/_Layout.cshtml
+++ b/FinalProject.Web/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,13 +10,14 @@
     <link rel="stylesheet" href="~/FinalProject.Web.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 </head>
-<body>
+
+<body class="d-flex flex-column min-vh-100">
     <header>
-       <partial name="_NavBar" />
+        <partial name="_NavBar" />
     </header>
 
-    <div class="container">
-        
+    <div class="container flex-grow-1">
+
         <!-- AMC Any alert defined in controller is rendered here -->
         <partial name="_Alert" />
 
@@ -28,15 +30,77 @@
         <i class="bi bi-arrow-up-square"></i>
     </button>
 
+    <footer>
+        <!-- Logo, Slogan section and social media/ store links section-->
+        <div class="footer-left">
+            <div class="footer-logo">
+                <img src="~/images/logo/whitelogo.svg" alt="Logo">
+                <p>Connecting Dog Lovers for Meet-Ups & Fun!</p>
+            </div>
 
-    <footer class="border-top footer text-muted text-center">
-        <div class="container">
-            &copy; @DateTime.Now.Year - Woof & Wander - <a asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <!-- social media-->
+            <div class="social-media-links">
+                <a href="https://en-gb.facebook.com/" target="_blank"><i class="bi bi-facebook"></i></a>
+                <a href="https://www.tiktok.com/explore" target="_blank"><i class="bi bi-tiktok"></i></a>
+                <a href="https://www.instagram.com/" target="_blank"><i class="bi bi-instagram"></i></a>
+                <a href="https://x.com/__x?mx=2" target="_blank"><i class="bi bi-twitter"></i></a>
+            </div>
+
+            <!--App store links-->
+            <div class="footer-store-links">
+                <a href="https://apps.apple.com/app" target="_blank"><img src="~/images/shop/apple.svg"
+                        alt="App Store"></a>
+                <a href="https://play.google.com/store" target="_blank"><img src="~/images/shop/google.svg"
+                        alt="Google Play"></a>
+            </div>
         </div>
+
+        <!-- Main Footer Links Section -->
+        <div class="footer-section">
+            <div class="footer-column">
+                <h3>Company</h3>
+                <a asp-controller="Home" asp-action="About">About Us</a>
+                <a asp-controller="Home" asp-action="Privacy">Privacy Policy</a>
+                <a asp-controller="Home" asp-action="Contact">Contact Us</a>
+            </div>
+
+            <div class="footer-column">
+                <h3>Services</h3>
+                <a asp-controller="Home" asp-action="Index">Home Page</a>
+                <a asp-controller="User" asp-action="Login">Login</a>
+                <a asp-controller="User" asp-action="Register">Register</a>
+            </div>
+        </div>
+
+        <!-- Seperate sections for Recommendations and Events-->
+        <div class="footer-recommendations">
+            <h3>Recommendations</h3>
+            <a asp-controller="Home" asp-action="Breed">Dog Breeds</a>
+            <a asp-controller="Home" asp-action="Locations">Locations</a>
+            <a asp-controller="Home" asp-action="Products">Products</a>
+            <a asp-controller="Home" asp-action="Recipes">Recipes</a>
+            <a asp-controller="Home" asp-action="Training">Training</a>
+            <a asp-controller="Home" asp-action="Vets">Vets</a>
+        </div>
+
+        <div class="footer-events">
+            <h3>Events</h3>
+            <a asp-controller="Event" asp-action="Events">Our Events</a>
+            <a asp-controller="Event" asp-action="Past">Gallery</a>
+            <a asp-controller="Event" asp-action="Calendar">Calendar</a>
+        </div>
+
+
+        <div class="container">
+            &copy; @DateTime.Now.Year - Woof & Wander 
+        </div>
+
     </footer>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+
 </html>
