--- a/FinalProject.Web/Views/Home/Index.cshtml
+++ b/FinalProject.Web/Views/Home/Index.cshtml
@@ -1,8 +1,4 @@
-﻿<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
-<!-- woof and wag banner -->
+﻿<!-- woof and wag banner -->
 <img src="~/images/banners/Welcome.svg" class="banner-full-width img-fluid" alt="Welcome banner">
 
 
