--- a/FinalProject.Web/Views/Shared/_NavBar.cshtml
+++ b/FinalProject.Web/Views/Shared/_NavBar.cshtml
@@ -70,6 +70,7 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" asp-controller="Home" asp-action="About">About</a></li>
                 <li><a class="dropdown-item" asp-controller="Home" asp-action="Privacy">Privacy</a></li>
+                <li><a class="dropdown-item" asp-controller="Home" asp-action="Contact">Contact Us</a></li>
             </ul>
         </li>
 
