--- a/FinalProject.Web/Views/_ViewImports.cshtml
+++ b/FinalProject.Web/Views/_ViewImports.cshtml
@@ -4,5 +4,6 @@
 @using FinalProject.Web.Models
 @using FinalProject.Web.Models.User
 @using FinalProject.Web.Views.Shared.Components
+@using FinalProject.Data.Extensions
 @addTagHelper *, FinalProject.Web
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
