added post community - not working properly

--- a/FinalProject.Web/Views/Event/Delete.cshtml
+++ b/FinalProject.Web/Views/Event/Delete.cshtml
@@ -3,12 +3,12 @@
 <div class="card rounded shadow p-4">
   <!-- Title bar -->
   <div class="border-bottom d-flex align-items-center justify-content-between mb-3">
-    <h3 class="text-primary">Delete Movie</h3>
+    <h3 class="text-primary">Delete Event</h3>
   </div>
 
   <h4 class="my-3 text-danger">Are you sure you want to delete this movie?</h4>
 
-  <!-- display the movie using a <dl> as per Details.cshtml -->
+  <!-- display the event using a <dl> as per Details.cshtml -->
   <dl class="row">
     <dt class="col-4 pb-1">Title</dt>
     <dd class="col-8 pb-1">@Model.Title</dd>
