--- a/FinalProject.Web/Views/Event/Details.cshtml
+++ b/FinalProject.Web/Views/Event/Details.cshtml
@@ -6,7 +6,7 @@
 
 <div class="card rounded shadow p-4">
     <div class="border-bottom d-flex align-items-center justify-content-between mb-3">
-        <h3 class="text-primary">@Model.Title</h3>
+        <h3>@Model.Title</h3>
 
         <a asp-action="Index" class="btn btn-sm btn-green" aria-label="event list">
             <i class="bi bi-list"></i>
@@ -18,7 +18,7 @@
         <div class="col-8 d-flex flex-column justify-content-between">
 
             <!-- Event details -->
-            <dl class="row">
+            <dl class="row details-text">
 
                 <dt class="col-4 pb-1">Date & Time</dt>
                 <dd class="col-8 pb-1">@Model.EventTime.ToString("MMM, dd, yyy - HH:mm")</dd>
