--- a/FinalProject.Web/Views/Post/CommentCreate.cshtml
+++ b/FinalProject.Web/Views/Post/CommentCreate.cshtml
@@ -1,17 +1,17 @@
-@model Review
+@model Comment
 
 <div class="card shadow rounded p-4">
     
     <!-- Title bar -->
     <div class="border-bottom d-flex align-items-center justify-content-between mb-3">
-        <h3 class="text-primary">Create Review</h3>
+        <h3 class="text-primary">Create Comment</h3>
     </div>
 
-    <form asp-action="ReviewCreate">
+    <form asp-action="CommentCreate">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     
-        <!-- review EventId should be a hidden input field named 'EventId' in the form -->      
-        <input type="hidden" asp-for="EventId" />
+        <!-- comment PostId should be a hidden input field named 'PostId' in the form -->      
+        <input type="hidden" asp-for="PostId" />
 
         <div class="mt-3">
             <label asp-for="Name" class="form-label"></label>      
@@ -20,26 +20,20 @@
         </div>
 
         <div class="mt-3">
-            <label asp-for="On" class="form-label"></label>      
-            <input asp-for="On" class="form-control"/>
-            <span asp-validation-for="On" class="text-danger"></span>
+            <label asp-for="CreatedAt" class="form-label"></label>      
+            <input asp-for="CreatedAt" class="form-control"/>
+            <span asp-validation-for="CreatedAt" class="text-danger"></span>
         </div>
 
         <div class="mt-3">
-            <label asp-for="Comment" class="form-label"></label>      
-            <textarea rows="5" asp-for="Comment" class="form-control"></textarea>
-            <span asp-validation-for="Comment" class="text-danger"></span>
-        </div>
-
-        <div class="mt-3">
-            <label asp-for="Rating" class="form-label"></label>      
-            <input asp-for="Rating" class="form-control"/>
-            <span asp-validation-for="Rating" class="text-danger"></span>
+            <label asp-for="Content" class="form-label"></label>      
+            <textarea rows="5" asp-for="Content" class="form-control"></textarea>
+            <span asp-validation-for="Content" class="text-danger"></span>
         </div>
     
         <div class="mt-3">
             <button type="submit" class="btn btn-primary" aria-label="create">Create</button>
-            <a class="btn btn-secondary" asp-action="Details" asp-route-id=@Model.EventId aria-label="cancel">Cancel</a>
+            <a class="btn btn-secondary" asp-action="Details" asp-route-id=@Model.PostId aria-label="cancel">Cancel</a>
         </div>
     </form>
 </div>
