--- a/FinalProject.Web/Views/Post/Edit.cshtml
+++ b/FinalProject.Web/Views/Post/Edit.cshtml
@@ -13,9 +13,15 @@
         </div>
 
         <div class="form-group mt-3">
-            <label asp-for="Body" class="form-label">Body</label>
-            <textarea asp-for="Body" class="form-control"></textarea>
-            <span asp-validation-for="Body" class="text-danger"></span>
+            <label asp-for="Content" class="form-label">Post</label>
+            <textarea asp-for="Content" class="form-control"></textarea>
+            <span asp-validation-for="Content" class="text-danger"></span>
+        </div>
+
+        <div class="mt-3">
+            <label asp-for="ImagePath" class="form-label"></label>
+            <input asp-for="ImagePath" type="url" class="form-control" />
+            <span asp-validation-for="ImagePath" class="text-danger"></span>
         </div>
 
         <div class="mt-3">
